--- a/src/components/product/product.scss
+++ b/src/components/product/product.scss
@@ -3,7 +3,7 @@
 .product-card {
     background-color: rgb(238, 238, 238);
     border: 1px solid #E6E6E6;
-    border-radius: 5px;
+    border-radius: 15px;
     font-size: 1rem;
     display: flex;
     min-height: 330px;
@@ -18,6 +18,7 @@
         justify-content: center;
         mix-blend-mode: darken;
         img {
+            border-radius: 15px ;
             width: 100%;
             height: 100%;
             // object-fit: contain;
@@ -74,15 +75,14 @@
         min-height: 240px;
         max-height: 280px;
         font-size: 12px;
+        width: 165px;
         .product-card-img {
-            width: 160px;
-            height: 130px;
+            width: 100%;
+            height: 160px;
         }
         .product-card-about {
             padding: 8px 8px;
-            // display: flex;
-            // flex-direction: column;
-            // // align-items: center;
+            font-size: 1rem;
             .product-card-about-title {
                 width: 9rem;
             }
