--- a/src/pages/category/category.scss
+++ b/src/pages/category/category.scss
@@ -11,6 +11,7 @@
     }
     .categories-div {
         display: flex;
+        justify-content: space-between;
         gap: 2rem;
         width: 78%;
         flex-wrap: wrap;
@@ -27,7 +28,8 @@
         .categories-div {
             width: 100%;
             display: flex;
-            gap: 1rem;
+            row-gap: 1.5rem;
+            column-gap: 1px;
             margin-top: 2rem;
         }
     }
